[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/Grenade.gd" type="Script" id=1]
[ext_resource path="res://assets/characters/Bahia/bombas/BombaCupuacuRelogio/Cylinder.mesh" type="ArrayMesh" id=2]
[ext_resource path="res://assets/characters/Bahia/bombas/CoxinhaDeCaranguejo/Sphere.mesh" type="ArrayMesh" id=3]
[ext_resource path="res://assets/characters/Bahia/bombas/PatoBomba/Plane.mesh" type="ArrayMesh" id=4]
[ext_resource path="res://assets/characters/Bahia/bombas/Molotov/Cylinder.mesh" type="ArrayMesh" id=5]
[ext_resource path="res://assets/sounds/Bombas/pato bomba.wav" type="AudioStream" id=6]

[sub_resource type="CapsuleShape" id=1]
radius = 1.10811
height = 2.37415

[sub_resource type="OpenSimplexNoise" id=2]
persistence = 1.0
lacunarity = 4.0

[sub_resource type="NoiseTexture" id=3]
noise = SubResource( 2 )

[sub_resource type="SpatialMaterial" id=4]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 0.984314, 0.709804, 0.709804, 0 )
albedo_texture = SubResource( 3 )
emission_enabled = true
emission = Color( 0.780392, 0.470588, 0.0196078, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=5]
resource_local_to_scene = true
material = SubResource( 4 )

[sub_resource type="Animation" id=6]
resource_name = "0"
tracks/0/type = "value"
tracks/0/path = NodePath("Explosão:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Explosão:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 10, 10, 10 ), Vector3( 10, 10, 10 ), Vector3( 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Explosão:mesh:material:albedo_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.984314, 0.709804, 0.709804, 1 ), Color( 0.984314, 0.709804, 0.709804, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Explosão:mesh:material:albedo_texture:noise:lacunarity")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, 4.0 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "stop"
}, {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "1"
tracks/0/type = "value"
tracks/0/path = NodePath("Explosão:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 15, 15, 15 ), Vector3( 15, 15, 15 ), Vector3( 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Explosão:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Explosão:mesh:material:albedo_texture:noise:lacunarity")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, 4.0 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "stop"
}, {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Explosão:mesh:material:albedo_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.984314, 0.709804, 0.709804, 1 ), Color( 0.984314, 0.709804, 0.709804, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "2"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("CPUParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4.9 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "stop"
}, {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "3"
tracks/0/type = "value"
tracks/0/path = NodePath("Explosão:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Explosão:mesh:material:albedo_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.984314, 0.709804, 0.709804, 1 ), Color( 0.984314, 0.709804, 0.709804, 1 ), Color( 0.984314, 0.709804, 0.709804, 0.0117647 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Explosão:mesh:material:albedo_texture:noise:lacunarity")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, 4.0 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "stop"
}, {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Explosão:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 30, 30, 30 ), Vector3( 30, 30, 30 ), Vector3( 1, 1, 1 ) ]
}

[sub_resource type="SphereShape" id=10]
radius = 10.1461

[sub_resource type="SpatialMaterial" id=11]
flags_transparent = true
albedo_color = Color( 1, 0.827451, 0.32549, 0.552941 )

[sub_resource type="SpatialMaterial" id=12]
next_pass = SubResource( 11 )
flags_transparent = true
albedo_color = Color( 1, 0.0313726, 0.0313726, 1 )

[sub_resource type="SphereMesh" id=13]
material = SubResource( 12 )
radial_segments = 4
rings = 1

[node name="Spatial" type="RigidBody"]
collision_layer = 6
collision_mask = 4
gravity_scale = 5.0
continuous_cd = true
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="Molotov" type="MeshInstance" parent="."]
transform = Transform( 0.0818862, -1.62373e-07, -0.996639, -0.996642, -1.33409e-08, -0.081886, 0, 0.999999, -1.6292e-07, 0, 0, -0.272697 )
visible = false
mesh = ExtResource( 5 )
material/0 = null
material/1 = null

[node name="Coxinha" type="MeshInstance" parent="."]
transform = Transform( 0.987646, 0.156693, -2.55285e-08, 0, -1.62921e-07, -0.999999, -0.156693, 0.987646, -1.60908e-07, 0, 0, -0.335096 )
visible = false
mesh = ExtResource( 3 )
material/0 = null
material/1 = null
material/2 = null

[node name="Pato" type="MeshInstance" parent="."]
transform = Transform( 0.999996, 0.00274029, 1.50996e-07, 0.00274029, -0.999996, 3.56302e-08, 1.51093e-07, -3.52163e-08, -1, -0.00375386, -0.337407, -0.705788 )
visible = false
mesh = ExtResource( 4 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null
material/5 = null
material/6 = null

[node name="Cupuacu" type="MeshInstance" parent="."]
transform = Transform( -0.999999, 3.25841e-07, -1.6292e-07, -1.62921e-07, 2.65431e-14, 0.999999, 3.25841e-07, 0.999999, 2.65431e-14, -0.229619, 0.238363, -0.100688 )
visible = false
mesh = ExtResource( 2 )
material/0 = null
material/1 = null
material/2 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Explosão" type="MeshInstance" parent="."]
mesh = SubResource( 5 )
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/0 = SubResource( 6 )
anims/1 = SubResource( 7 )
anims/2 = SubResource( 8 )
anims/3 = SubResource( 9 )

[node name="Area" type="Area" parent="."]
space_override = 1
monitoring = false
collision_layer = 4
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 10 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Explosion" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 6 )
unit_db = 50.0

[node name="CPUParticles" type="CPUParticles" parent="."]
emitting = false
amount = 100
lifetime = 0.5
mesh = SubResource( 13 )
spread = 180.0
gravity = Vector3( 0, -4, 0 )
initial_velocity = 20.0
initial_velocity_random = 1.0
linear_accel = 5.88
linear_accel_random = 1.0
[connection signal="body_entered" from="." to="." method="_on_Spatial_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Spatial_body_exited"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
